fix: responsiveness in the modal, removing the copy button from the details modal, styling the gender section in the forms and increasing the spacing of the title with the submission form to the developer

--- a/src/components/Form/index.module.css
+++ b/src/components/Form/index.module.css
@@ -10,6 +10,7 @@ section.formSection h2{
   text-align: center;
   color: #ffffff;
   font-size: 2rem;
+  margin-bottom: 10px;
 }
 
 form.form{
